- fix camera css so that it dont flicker

--- a/src/Components/DragDropFileInput/DragDropFileInput.css
+++ b/src/Components/DragDropFileInput/DragDropFileInput.css
@@ -11,6 +11,12 @@
   margin-top: 20px;
   position: relative; /* To position the plus sign */
 }
+@media only screen and (max-width: 1092px) {
+  .camera-feed {
+    max-height: 350px!important;
+    min-height: 350px!important;
+  }
+}
 .drag-drop-file-input p {
   margin-bottom: -50px;
   color: #ccc;
@@ -64,18 +70,19 @@ input[type="file"] {
 #preview {
   display: none;
   max-width: 100%;
+  min-height: 100%;
   max-height: 100%;
 }
 
 #preview.active {
   display: block;
+  min-height: 100%;
 }
 
 .drag-drop-container {
   grid-area: a;
 }
 
-/* DragDropFileInput.css */
 .modal {
   display: flex;
   justify-content: center;
@@ -120,10 +127,12 @@ input[type="file"] {
   flex-direction: column;
   align-items: center;
   margin-top: 20px;
+  min-height: 100%;
 }
 
 .camera-container.active {
   display: flex;
+  min-height: 100%;
 }
 
 .options-container {
@@ -173,5 +182,5 @@ input[type="file"] {
 .camera-feed {
   max-width: 600px;
   max-height: 600px;
-  min-height: 400px;
+  min-height: 500px;
 }
